[8:22PM 7/27/2012]
	- renamed 'cg' variable to 'isGUI'
	- console and gui clients now both share the same 'connecting to server' message
[9:12PM 7/26/2012]
	- GUI client will no longer give the console-mode "/logout and /quit" message
	- GUI client can no longer be resized (for the time being, at least)
[4:59 PM 7/25/2012]
	- client will no longer send blank messages

SERVER
[2:27PM 5/11/2013]
	- text areas in the GUI server now automatically scroll if necessary
[12:02AM 5/11/2013]
	- if the username the user is connecting with is already in use they will be denied
[11:50PM 5/10/2013]
	- /nick no longer works if the username is registered (TODO: allow authenticating as it?)
[11:41PM 5/10/2013]
	- /nick no longer works if another user is using that name
[5:44PM 5/3/2013]
	- banning the console will no longer affect its use of commands (temporary solution, probably)
[5:36PM 5/3/2013]
	- /nick now works correctly
[11:43AM 5/2/2013]
	- removed client-sided username checks and made them server-side instead
		-> previous clients will still be able to connect if they still have the checks
[11:32AM 5/2/2013]
	- added version checking
[9:26PM 5/1/2013]
	- renamed ServerPermissionsHandler.java -> PermissionsHandler.java
	- renamed ServerCommandHandler.java -> CommandHandler.java
	- added header comments to all files
[10:26AM 4/30/2013]
	- fixed memory leaks with a few unclosed objects
	- refactored some variable names
[10:16PM 4/29/2013]
	- refactored into org.pavlinic.chat.server for server-specific features
[8:58PM 8/4/2012]: v0.4-alpha
	- began implementing authentication system
		* the client has not yet been updated to support this update
		- accounts can be registered with /account register <password>
		- passwords are hashed and stored in data/logins-db/USERNAME.dat
		- users are only required to enter a password if the chosen name is already registered
			- registered accounts cannot be logged into unless given the correct password